--- a/FinanceManagement/packages.config
+++ b/FinanceManagement/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="8.0.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="8.0.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="8.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ClientModel" version="1.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
