--- a/FinanceManagement/App.config
+++ b/FinanceManagement/App.config
@@ -2,9 +2,9 @@
 <configuration>
 
 	<!--Change the connection string-->
-	<connectionStrings>
-		<add name="ConnectionString" connectionString="Data Source=DESKTOP-55CF0BQ\SQLEXPRESS;Initial Catalog=FinanceDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+	<!--<connectionStrings>
+		<add name="ConnectionString" connectionString="YOUR_CONNECTION_STRING" />
+	</connectionStrings>-->
 
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
