--- a/FinanceManagement/FinanceManagement.csproj
+++ b/FinanceManagement/FinanceManagement.csproj
@@ -217,7 +217,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="App.config" />
-    <None Include="config.json.example" />
+    <None Include="config.example.json" />
     <None Include="config.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
