--- a/FinanceManagement/FinanceManagement.csproj
+++ b/FinanceManagement/FinanceManagement.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\UserSession.cs" />
     <Compile Include="Utils\HashingHelper.cs" />
+    <Compile Include="Utils\StringHelper.cs" />
     <Compile Include="Utils\ValidationHelper.cs" />
     <EmbeddedResource Include="Forms\Category\frmAddCategory.resx">
       <DependentUpon>frmAddCategory.cs</DependentUpon>
@@ -239,6 +240,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmDashboard.resx">
       <DependentUpon>frmDashboard.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
