--- a/FinanceManagement/FinanceManagement.csproj
+++ b/FinanceManagement/FinanceManagement.csproj
@@ -193,6 +193,12 @@
     <Compile Include="Forms\Category\frmCategoryManagement.Designer.cs">
       <DependentUpon>frmCategoryManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmRecurringTransactions.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\frmRecurringTransactions.Designer.cs">
+      <DependentUpon>frmRecurringTransactions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmStartup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -212,6 +218,7 @@
       <DependentUpon>frmDashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Recurring.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\Auth\frmRegister.cs">
@@ -221,6 +228,7 @@
       <DependentUpon>frmRegister.cs</DependentUpon>
     </Compile>
     <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\RecurringTransactions.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\UserSession.cs" />
     <Compile Include="Utils\HashingHelper.cs" />
@@ -244,6 +252,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmRecurringTransactions.resx">
+      <DependentUpon>frmRecurringTransactions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmStartup.resx">
       <DependentUpon>frmStartup.cs</DependentUpon>
@@ -287,6 +298,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Assets\power-off.png" />
+    <None Include="Resources\iconTransaction.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.5.2.0\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.5.2.0\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
