Added navigation to the goals screen, and ability to enable/disable the dates and amount inputs

--- a/FinanceManagement/FinanceManagement.csproj
+++ b/FinanceManagement/FinanceManagement.csproj
@@ -212,7 +212,7 @@
       <DependentUpon>frmDashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Goal\frmGoalManagement.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\Goal\frmGoalManagement.Designer.cs">
       <DependentUpon>frmGoalManagement.cs</DependentUpon>
