--- a/FinanceManagement/FinanceManagement.csproj
+++ b/FinanceManagement/FinanceManagement.csproj
@@ -175,6 +175,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DatabaseConnection.cs" />
+    <Compile Include="Forms\Budget\FrmAddBudget.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Budget\FrmAddBudget.Designer.cs">
+      <DependentUpon>FrmAddBudget.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Budget\FrmBudgetManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Budget\FrmBudgetManagement.Designer.cs">
+      <DependentUpon>FrmBudgetManagement.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Category\frmAddCategory.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -211,6 +223,7 @@
     <Compile Include="Forms\frmDashboard.Designer.cs">
       <DependentUpon>frmDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Budget.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -220,12 +233,19 @@
     <Compile Include="Forms\Auth\frmRegister.Designer.cs">
       <DependentUpon>frmRegister.cs</DependentUpon>
     </Compile>
+    <Compile Include="Services\BudgetService.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\UserSession.cs" />
     <Compile Include="Utils\HashingHelper.cs" />
     <Compile Include="Utils\StringHelper.cs" />
     <Compile Include="Utils\ValidationHelper.cs" />
+    <EmbeddedResource Include="Forms\Budget\FrmAddBudget.resx">
+      <DependentUpon>FrmAddBudget.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Budget\FrmBudgetManagement.resx">
+      <DependentUpon>FrmBudgetManagement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Category\frmAddCategory.resx">
       <DependentUpon>frmAddCategory.cs</DependentUpon>
     </EmbeddedResource>
