--- a/FinanceManagement/FinanceManagement.csproj
+++ b/FinanceManagement/FinanceManagement.csproj
@@ -211,6 +211,12 @@
     <Compile Include="Forms\frmDashboard.Designer.cs">
       <DependentUpon>frmDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Goal\frmAddGoal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Goal\frmAddGoal.Designer.cs">
+      <DependentUpon>frmAddGoal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Goal\frmGoalManagement.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -269,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmStartup.resx">
       <DependentUpon>frmStartup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Goal\frmAddGoal.resx">
+      <DependentUpon>frmAddGoal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Goal\frmGoalManagement.resx">
       <DependentUpon>frmGoalManagement.cs</DependentUpon>
